--- a/forms.html
+++ b/forms.html
@@ -2,7 +2,7 @@
   <label for="name">First name:</label>
   <input id="name" type="text" name="name" />
 </form>
-form>
+<form>
   <label for="name">Email:</label>
   <input id="name" type="text" name="name" />
 </form>
