--- a/forms.html
+++ b/forms.html
@@ -3,10 +3,14 @@
   <input id="name" type="text" name="name" />
 </form>
 <form>
-  <label for="name">Email:</label>
+  <label for="email">Email:</label>
   <input id="name" type="text" name="name" />
 </form>
 <form>
   <label for="form-message">Your message:</label>
   <textarea id="form-message" name="message"></textarea>
+</form>
+<form>
+  ...
+  <button type="submit">Submit</button>
 </form>
