--- a/forms.html
+++ b/forms.html
@@ -1,16 +1,17 @@
 <form>
-  <label for="name">First name:</label>
-  <input id="name" type="text" name="name" />
+  <label for="first-name">First name:</label>
+  <input id="first-name" type="text" name="first-name" />
 </form>
 <form>
   <label for="email">Email:</label>
-  <input id="name" type="text" name="name" />
+  <input id="email" type="text" name="email" />
 </form>
 <form>
   <label for="form-message">Your message:</label>
   <textarea id="form-message" name="message"></textarea>
 </form>
 <form>
-  ...
+  <input type="text" name="additional-field" placeholder="Additional Field">
   <button type="submit">Submit</button>
 </form>
+
